tdf#124604 DOCX import: fix indentation at numbering

If the actual numbering style was associated to a base
paragraph style, indentation of the base paragraph
style has also priority over the indentation defined
in the numbering style.

Change-Id: Ic57b6b854be291c75c0eb7a9dfd4c376585fe26b
Reviewed-on: https://gerrit.libreoffice.org/78659
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>